--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -4,22 +4,30 @@
 {% block stylesheets %}{% endblock %}
 {% block top %}
     <div class="container">
+        <div class="text-end">
+            <a href="{{ path('logout') }}" class="link-dark">se déconnecter ➜</a>
+        </div>
         <!-- titre -->
-        <div class="text-left">
-            <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="img banniere" >
+        <div class="row">
+            <div class="col-6 text-left">
+                <img src="{{ app.request.getBasePath()~'/adminbanniere.jpg' }}" alt="img banniere" >
+            </div>
+            <div class="col-6 d-flex align-items-center">
+                <h2 class=""><strong>🚧 Back office 🚧</strong></h2>
+            </div>
         </div>
         <!-- menu -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('accueil') }}">Accueil</a>
+                        <a class="nav-link" href="{{ path('admin.formations')}}">Formations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('formations') }}">Formations</a>
+                        <a class="nav-link" href="{{ path('admin.playlists')}}">Playlists</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
+                        <a class="nav-link" href="{{ path('admin.categories')}}">Catégories</a>
                     </li>
                 </ul>
             </div>
