--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -4,6 +4,11 @@
 {% block stylesheets %}{% endblock %}
 {% block top %}
     <div class="container">
+        {% if is_granted("ROLE_ADMIN") %}
+            <div class="text-end">
+                <a href="{{ path('logout') }}" class="link-dark">se déconnecter ➜</a>
+            </div>
+        {% endif %}
         <!-- titre -->
         <div class="text-left">
             <img src="{{ app.request.getBasePath()~'/banniere.jpg' }}" alt="img banniere" >
@@ -22,6 +27,9 @@
                         <a class="nav-link" href="{{ path('playlists') }}">Playlists</a>
                     </li>
                 </ul>
+            </div>
+            <div class="nav-item justify-content-md-end navbar-nav">
+                <a class="nav-link" href="{{ path('admin.formations') }}">Admin</a>
             </div>
         </nav>
     </div>
