--- a/templates/pages/admin/formations.html.twig
+++ b/templates/pages/admin/formations.html.twig
@@ -107,7 +107,7 @@
                     </td>
                     <td class="text-center">
                         {% if formation.miniature %}
-                            <a href="{{ path('formations.showone', {id:formation.id}) }}">
+                            <a href="{{ path('admin.showone', {id:formation.id}) }}">
                                 <img src="{{ formation.miniature }}" alt="image de la formation">
                             </a>
                         {% endif %}
