--- a/templates/_admin.playlist.form.html.twig
+++ b/templates/_admin.playlist.form.html.twig
@@ -8,6 +8,15 @@
             <h5>⚠️ Une formation ne peut être rattaché qu'a une playlist⚠️</h5>
             <br />
             <br />
+            <ul>
+                <li>
+                    Ctrl+clic : pour sélectionner plusieurs éléments un à un ou en désélectionner un.
+
+                </li>
+                <li>
+                    Shift+clic : pour sélectionner tous les éléments compris entre le premier et le second clic.
+                </li>
+            </ul>
             {{ form_row(formPlaylist.submit, {'attr': {'onclick': 'return confirm(Etes-vous sûr?")'}}) }}
         </div>
     {{ form_end(formPlaylist) }}
