--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -14,7 +14,7 @@
                 <img src="{{ app.request.getBasePath()~'/adminbanniere.jpg' }}" alt="img banniere" >
             </div>
             <div class="col-6 d-flex align-items-center">
-                <h2 class=""><strong>🚧 Back office 🚧</strong></h2>
+                <h2 class=""><strong>!!! Back office !!!</strong></h2>
             </div>
         </div>
         <!-- menu -->
